# blue-prince

./: Cargo.toml  rustfmt.toml
crates/gallry-puzzle-soulver/: Cargo.toml
crates/gallry-puzzle-soulver/benches/: word_generator_benchmark.rs
crates/gallry-puzzle-soulver/src/: lib.rs  main.rs
crates/gallry-puzzle-soulver/tests/: lib.rs
