[package]
name = "gallry-puzzle-soulver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bin]]
name = "gallery-puzzle-soulver"
path = "src/main.rs"

[[bench]]
name = "word_generator_benchmark"
harness = false
